chore: correct z-index issue
Not able to select text or click links in hero--image on homepage

--- a/content/themes/local-whistler/app/styles/_navigation.scss
+++ b/content/themes/local-whistler/app/styles/_navigation.scss
@@ -1,4 +1,6 @@
 .menu {
+  position: relative;
+  z-index: 2;
   @include breakpoint( $bp5 ) {
     margin-top: $baseline*2;
     border: 1px solid rgba(0,0,0,0.15);
